--- a/indexadmission.html
+++ b/indexadmission.html
@@ -236,16 +236,16 @@
     <div id="department">
 
         <div id="d1">
-            <a href="indexrcca.html #admission"> Rahul college of computer application</a>
+            <a href="indexrcca.html/#admission"> Rahul college of computer application</a>
         </div><br>
         <div id="d2">
-            <a href="indexrcc.html #admission">Rahul college of commerce</a>
+            <a href="indexrcc.html/#admission">Rahul college of commerce</a>
         </div><br>
-        <div id="d3"><a href="indexrca.html #admission">Rahul college of arts</a></div><br>
-        <div id="d4"><a href="indexrcit.html #admission">Rahul college of information technology</a></div><br>
-        <div id="d5"><a href="indexrct.html #admission">Rahul college of technology</a></div><br>
-        <div id="d6"><a href="indexrcnm.html #admission">Rahul college of nursing</a></div><br>
-        <div id="d7"><a href="indexrcbm.html #admission">Rahul college of bussiness administration</a></div>
+        <div id="d3"><a href="indexrca.html/#admission">Rahul college of arts</a></div><br>
+        <div id="d4"><a href="indexrcit.html/#admission">Rahul college of information technology</a></div><br>
+        <div id="d5"><a href="indexrct.html/#admission">Rahul college of technology</a></div><br>
+        <div id="d6"><a href="indexrcnm.html/#admission">Rahul college of nursing</a></div><br>
+        <div id="d7"><a href="indexrcbm.html/#admission">Rahul college of bussiness administration</a></div>
 
     </div><br>
     <div class="bt">
