--- a/indexadmission.html
+++ b/indexadmission.html
@@ -236,7 +236,7 @@
     <div id="department">
 
         <div id="d1">
-            <a href="indexrcca.html/#admission"> Rahul college of computer application</a>
+            <a href="https://rahulsharmakh.github.io/rahuluni.github.io/indexrcca.html/#admission"> Rahul college of computer application</a>
         </div><br>
         <div id="d2">
             <a href="indexrcc.html/#admission">Rahul college of commerce</a>
