--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="department">
             <div class="dsp" text-align="center">DEPARTMENT</div><br>
             <div id="d1">
-                <a href="indexrcca.html"> Rahul college of computer application</a>
+                <a href="indexrcca.html/#admission"> Rahul college of computer application</a>
             </div><br>
             <div id="d2">
                 <a href="indexrcc.html">Rahul college of commerce</a>
