--- a/indexrcca.html
+++ b/indexrcca.html
@@ -406,6 +406,7 @@
         </table>
     </div>
     <div id="admission"><br>
+        <a name="admission"></a>
         <div id="ad">ADMISSION</div><br>
         <ul id="l1"><br>
             <li>If you want to take admission in that college then fill up this form.</li><br>
